[UVMS-3002] * Add meta tag for format detection. To avoid Edge not to detect number combination as a phone number * Add Y scroll bar. To avoid the site from "Jumping" when content is switched

--- a/app/app.less
+++ b/app/app.less
@@ -237,6 +237,7 @@ body{
     width: 100%;
     background-color: @pageBackgroundColor;
     font-family: @primaryFontFamily;
+    overflow-y: auto;
 }
 
 //Loading indicator shown when app starts
